@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-04-12T01:08:08Z",
-  "count" : 4,
+  "timestamp" : "2022-04-25T16:21:13Z",
+  "count" : 2,
   "count_minmax" : [ 0, 4 ],
   "count_prev_day_inc" : 2,
   "count_prev_day_dec" : 4,
-  "uniques" : 2,
+  "uniques" : 1,
   "uniques_minmax" : [ 0, 2 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 2
