@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-04-25T08:20:14Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
-  "count_prev_day_inc" : 1,
-  "count_prev_day_dec" : 0,
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_prev_day_inc" : 1,
-  "uniques_prev_day_dec" : 0
+  "timestamp" : "2022-04-25T16:21:13Z",
+  "count" : 3,
+  "count_minmax" : [ 1, 3 ],
+  "count_prev_day_inc" : 3,
+  "count_prev_day_dec" : 2,
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_prev_day_inc" : 2,
+  "uniques_prev_day_dec" : 1
 }
