@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-04-25T08:20:14Z",
+  "timestamp" : "2022-04-25T16:21:13Z",
   "count_outdated" : 245,
   "uniques_outdated" : 109,
   "count" : 259,
@@ -7,9 +7,9 @@
   "views" : [
     {
       "timestamp": "2022-04-11T00:00:00Z",
-      "count": 4,
+      "count": 2,
       "count_minmax": [ 0, 4 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 0, 2 ]
     },
     {
@@ -49,10 +49,10 @@
     },
     {
       "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ]
     }
   ]
 }
