@@ -4,8 +4,8 @@
   "views": [
     {
       "timestamp": "2022-04-11T00:00:00Z",
-      "count": 4,
-      "uniques": 2
+      "count": 2,
+      "uniques": 1
     },
     {
       "timestamp": "2022-04-12T00:00:00Z",
@@ -34,8 +34,8 @@
     },
     {
       "timestamp": "2022-04-25T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
