@@ -1,3 +1,9 @@
+2022-04-25T16:21:13Z:
+* notice: last 14d: all unq: 14 8
+* notice: prev accum: outdated-all outdated-unq / all unq: 245 109 / 259 118
+* notice: next accum: outdated-all outdated-unq / all unq: 245 109 / 259 118
+* notice: prev json diff // prev day diff: unq all: +1 +2 / -1 -2 // +2 +3 / -1 -2
+
 2022-04-25T08:20:14Z:
 * notice: last 14d: all unq: 14 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 245 109 / 258 117
